# pyslam

./: .clang-format  .clang-tidy  .cursorignore  .gitignore  .gitmodules  CITATION.cff  CONDA.md  Dockerfile  MAC.md  PYTHON-VIRTUAL-ENVS.md  README.md  TROUBLESHOOTING.md  bash_utils.sh  bug_report.md  build_cpp.sh  camera.py  camera_pose.py  clean.sh  config.ini  config.py  config.template.yaml  config.yaml  config_libs.yaml  config_parameters.py  constants.py  convert_groundtruth.py  cuda_config.sh  dataset.py  depth_estimator.py  depth_estimator_base.py  depth_estimator_crestereo.py  depth_estimator_crestereo_pytorch.py  depth_estimator_depth_anything_v2.py  depth_estimator_depth_pro.py  depth_estimator_factory.py  depth_estimator_raft_stereo.py  display2D.py  dockerfile  feature_aliked.py  feature_contextdesc.py  (+155 more)
cpp/: CMakeLists.txt  MLPnPsolver.h  PnPsolver.h  README.md  Random.h  Sim3PointRegistrationSolver.cpp  Sim3PointRegistrationSolver.h  Sim3Solver.cpp  Sim3Solver.h  build.sh  cv2_pyslam_module.cpp  glutils_module.cpp  opencv_type_casters.h  pnpsolver_module.cpp  pybind11  sim3solver_module.cpp  test_glutils_hello_pangolin.py  test_glutils_simple_display_menu.py  test_glutils_simple_draw.py  test_pnpsolver.py  test_sim3_point_registration_solver.py  test_sim3solver.py  test_volumetric.py  test_volumetric_bounding_boxes.py  test_volumetric_voxel_semantic.py  utils.cpp  utils.h  utils_module.cpp
cpp/casters/: README.md  opencv_type_casters.h
cpp/casters/old_versions/: opencv_type_casters_v1.h
cpp/color_utils/: color_utils.cpp  color_utils.h  color_utils_module.cpp
cpp/glutils/: README.md  glmesh.h  glmesh_bindings.h  globject.h  globject_bindings.h  glpoint_cloud.h  glpoint_cloud_bindings.h  glutils_bindings.cpp  glutils_bindings.h  glutils_bindings_common.h  glutils_bindings_utils.h  glutils_camera.h  glutils_common.h  glutils_drawing.cpp  glutils_drawing.h  glutils_gl_includes.h  glutils_module.cpp  glutils_opaque_types.h  glutils_utils.h
cpp/hamming/: README.md  hamming_module.cpp
cpp/pybind11/: CMakeLists.txt
cpp/pybind11/include/pybind11/: attr.h
cpp/solvers/: MLPnPsolver.cpp  MLPnPsolver.h  PnPsolver.cpp  PnPsolver.h  Random.cpp  Random.h  Sim3PointRegistrationSolver.cpp  Sim3PointRegistrationSolver.h  Sim3Solver.cpp  Sim3Solver.h  pnpsolver_module.cpp  sim3solver_module.cpp
cpp/test_opencv_casters/: CMakeLists.txt  README.md  bench_opencv_casters.cpp  build.sh  clean.sh  opencv_type_casters.h  pybind11  run_tests.sh  test_bindings.cpp  test_casters.py
cpp/trajectory/: trajectory_alignement_incremental.h  trajectory_alignment.h  trajectory_tools_module.cpp
cpp/utils/: .gitignore  CMakeLists.txt  MLPnPsolver.cpp  MLPnPsolver.h  PnPsolver.cpp  PnPsolver.h  README.md  Random.cpp  Sim3Solver.cpp  Sim3Solver.h  build.sh  cv2_pyslam_module.cpp  glutils_module.cpp  opencv_type_casters.h  pybind11  sim3solver_module.cpp  test.py  test_sim3solver.py  utils.cpp  utils.h  utils_module.cpp
cpp/volumetric/: README.md  bounding_boxes.cpp  bounding_boxes.h  bounding_boxes_2d.cpp  bounding_boxes_2d.h  bounding_boxes_3d.cpp  bounding_boxes_3d.h  bounding_boxes_module.h  camera_frustrum.cpp  camera_frustrum.h  camera_frustrum_module.h  eigen_module.h  image_utils.h  image_utils_module.h  tbb_utils.h  volumetric_grid_module.cpp  volumetric_grid_module.h  volumetric_module.cpp  volumetric_opaque_bindings.h  volumetric_opaque_types.h  voxel_block.h  voxel_block_grid.h  voxel_block_grid.hpp  voxel_block_semantic_grid.h  voxel_block_semantic_grid.hpp  voxel_data.h  voxel_data_semantic.h  voxel_data_semantic2.h  voxel_grid.h  voxel_grid.hpp  voxel_grid_carving.h  voxel_grid_data.h  voxel_grid_data_module.h  voxel_grid_simd.h  voxel_grid_simd.hpp  voxel_hashing.h  voxel_semantic_data_association.h  voxel_semantic_grid.h  voxel_semantic_grid.hpp  voxel_semantic_shared_data.h
pyslam/slam/cpp/: CMakeLists.txt  README.md  __init__.py  build.sh  camera.cpp  camera.h  camera_pose.cpp  camera_pose.h  camera_serialization_json.cpp  camera_serialization_py.cpp  ckdtree_eigen.h  clean.sh  config_parameters.cpp  config_parameters.h  cpp_core_module.cpp  cpp_dictionary_casters.h  dictionary.h  eigen_aliases.h  feature_shared_info.cpp  feature_shared_info.h  feature_shared_resources.cpp  feature_shared_resources.h  frame.cpp  frame.h  frame_serialization.cpp  frame_serialization_json.cpp  frame_serialization_py.cpp  geometry_matchers.cpp  geometry_matchers.h  global_descriptor.h  keyframe.cpp  keyframe.h  keyframe_serialization.cpp  keyframe_serialization_json.cpp  keyframe_serialization_py.cpp  local_mapping_core.cpp  local_mapping_core.h  map.cpp  map.h  map_point.cpp  (+27 more)
pyslam/slam/cpp/casters/: dictionary_casters.h  nlohmann_json_type_casters.h  opencv_type_casters.h  slam_opaque_types.h
pyslam/slam/cpp/py_module/: camera_module.h  ckdtree_module.h  config_parameters_module.h  cpp_core_module.cpp  eigen_module.h  feature_shared_info_module.h  feature_shared_resources_module.h  frame_module.h  geometry_matchers_module.h  keyframe_module.h  local_mapping_core_module.h  map_module.h  map_point_module.h  mutex_wrapper_module.h  optimizer_common_module.h  optimizer_g2o_bind_helpers.h  optimizer_g2o_module.h  optimizer_gtsam_bind_helpers.h  optimizer_gtsam_module.h  py_wrappers.h  rotation_histogram_module.h  sim3_pose_module.h  tracking_core_module.h  tracking_utils_module.h
pyslam/slam/cpp/test/: test_slam_cpp_module.py
pyslam/slam/cpp/tests_cpp/: CMakeLists.txt  README_cpp_to_python_serialization.md  README_python_to_cpp_serialization.md  README_python_to_cpp_to_python_serialization.md  run_all_tests.sh  run_cpp_to_python_serialization_test.sh  run_python_to_cpp_serialization_test.sh  run_python_to_cpp_to_python_serialization_test.sh  test_cpp_to_python_map.cpp  test_image_management.cpp  test_json_camera.cpp  test_json_eigen.cpp  test_json_frame.cpp  test_json_keyframe.cpp  test_json_map.cpp  test_json_map_point.cpp  test_json_serialization.cpp  test_kdtree_basic.cpp  test_kdtree_validation.cpp  test_numpy_camera.cpp  test_numpy_cv_mat.cpp  test_numpy_frame.cpp  (+5 more)
(+824 files in other folders)
